top section is complete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
 </head>
 <body>
-    
+    <main>
+        <section class="top">
+            <div class="top-contant top-section">
+                <h1 class="top-heading">The Greatest show on the earth</h1>
+                <p class="top-text">The World Cup in football (soccer) is a quadrennial tournament of 32 national teams that is organized by the Fédération Internationale de Football Association (FIFA). It determines the sport's men's world champion</p>
+                <div class="top-btn ">
+                    <button disabled>Watch Live <i class="fa-solid fa-angle-right"></i></button>
+                </div>
+            </div>
+            <div class="top-img top-section">
+                <img src="images/Banner Image.png" alt="Naymar">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
