--- a/index.html
+++ b/index.html
@@ -25,6 +25,67 @@
                 <img src="images/Banner Image.png" alt="Naymar">
             </div>
         </section>
+        <section class="main-contant">
+            <nav class="contant-nav">
+                 <a href="" >Upcoming Match</a>
+                 <a href="" >All Match</a>
+                 <a href="#blogs"  class="active-nav">Blogs</a>
+            </nav>
+            <div id="blogs">
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog-1.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog -1.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog -1.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog -1.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
