blog section done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,15 @@
     <title> Free Kick- Ultimate news of Football</title>
 
 </head>
+
 <body>
     <main>
         <section class="top">
             <div class="top-contant top-section">
                 <h1 class="top-heading">The Greatest show on the earth</h1>
-                <p class="top-text">The World Cup in football (soccer) is a quadrennial tournament of 32 national teams that is organized by the Fédération Internationale de Football Association (FIFA). It determines the sport's men's world champion</p>
+                <p class="top-text">The World Cup in football (soccer) is a quadrennial tournament of 32 national teams
+                    that is organized by the Fédération Internationale de Football Association (FIFA). It determines the
+                    sport's men's world champion</p>
                 <div class="top-btn ">
                     <button disabled>Watch Live <i class="fa-solid fa-angle-right"></i></button>
                 </div>
@@ -27,9 +31,9 @@
         </section>
         <section class="main-contant">
             <nav class="contant-nav">
-                 <a href="" >Upcoming Match</a>
-                 <a href="" >All Match</a>
-                 <a href="#blogs"  class="active-nav">Blogs</a>
+                <a href="">Upcoming Match</a>
+                <a href="">All Match</a>
+                <a href="index.html#blogs" class="active-nav">Blogs</a>
             </nav>
             <div id="blogs">
                 <div class="blog">
@@ -47,7 +51,7 @@
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/blog -1.jpg" alt="">
+                        <img src="images/blog-2.jpg" alt="">
                     </div>
                     <div class="blog-info">
                         <span>Transfer</span>
@@ -60,7 +64,7 @@
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/blog -1.jpg" alt="">
+                        <img src="images/blog-3.jpg" alt="">
                     </div>
                     <div class="blog-info">
                         <span>Transfer</span>
@@ -73,7 +77,72 @@
                 </div>
                 <div class="blog">
                     <div class="blog-img">
-                        <img src="images/blog -1.jpg" alt="">
+                        <img src="images/blog-4.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog-5.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog-1.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog-2.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog-3.jpg" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <span>Transfer</span>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-data">
+                            <div class="blog-time"><i class="fa-regular fa-clock"></i><span>10h</span></div>
+                            <div class="blog-coment"><i class="fa-regular fa-comment-dots"></i> <span>37</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-img">
+                        <img src="images/blog-4.jpg" alt="">
                     </div>
                     <div class="blog-info">
                         <span>Transfer</span>
@@ -86,6 +155,32 @@
                 </div>
             </div>
         </section>
+
     </main>
+    <footer>
+        <div class="fotter">
+            <div class="site-name">
+                <h2>Free KICK</H2>
+            </div>
+            <div class="site-name">
+                <a href=""><i class="fa-brands fa-facebook-square"></i></a>
+                <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+                <a href=""><i class="fa-brands fa-youtube-square"></i></a>
+                <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+            </div>
+            <hr>
+            <nav class="footer-menu">
+                <a href="">Contact Us</a>
+                <a href="">Trams of Servics</a>
+                <a href="">Privesy Policy</a>
+                <a href="">Privesy Setting</a>
+                <a href="">Free Kick App</a>
+                <a href="">Live</a>
+                <a href=""></a>
+            </nav>
+
+        </div>
+    </footer>
 </body>
+
 </html>
