every thing done with out responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
         <section class="main-contant">
             <nav class="contant-nav">
-                <a href="">Upcoming Match</a>
+                <a href="upcoming.html#up-match">Upcoming Match</a>
                 <a href="">All Match</a>
                 <a href="index.html#blogs" class="active-nav">Blogs</a>
             </nav>
