small device responsive done

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="site-name">
                 <h2>Free KICK</H2>
             </div>
-            <div class="site-name">
+            <div class=".site-name social">
                 <a href=""><i class="fa-brands fa-facebook-square"></i></a>
                 <a href=""><i class="fa-brands fa-instagram-square"></i></a>
                 <a href=""><i class="fa-brands fa-youtube-square"></i></a>
