--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                         </div>
                     </div>
                 </div>
+
             </div>
+            <div class="viwe-all"><button>View All</button></div>
         </section>
 
     </main>
