everything done accroding to requirment

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <main>
+        <!-- ===================================TOP SECTION START===============================-->
         <section class="top">
             <div class="top-contant top-section">
                 <h1 class="top-heading">The Greatest show on the earth</h1>
@@ -28,7 +29,14 @@
             <div class="top-img top-section">
                 <img src="images/Banner Image.png" alt="Naymar">
             </div>
+            <!-- animation football -->
+            <div class="football"><img src="images/football.png" alt=""></div>
         </section>
+
+        <!-- ================================TOP SECTION END=====================================-->
+
+        <!-- =============================BLOG & NAV SECTION START===============================-->
+
         <section class="main-contant">
             <nav class="contant-nav">
                 <a href="upcoming.html#up-match">Upcoming Match</a>
@@ -157,8 +165,9 @@
             </div>
             <div class="viwe-all"><button>View All</button></div>
         </section>
-
+        <!-- =============================BLOG & NAV SECTION END===============================-->
     </main>
+    <!-- ================================FOOTER SECTION START===============================-->
     <footer>
         <div class="fotter">
             <div class="site-name">
@@ -183,6 +192,8 @@
 
         </div>
     </footer>
+    <!-- ================================FOOTER SECTION END===============================-->
+
 </body>
 
 </html>
