Social link are added in the bottom of the website

--- a/upcoming.html
+++ b/upcoming.html
@@ -152,12 +152,7 @@
          <div class="site-name">
             <h2>Free KICK</H2>
          </div>
-         <div class="social">
-            <a href=""><i class="fa-brands fa-facebook-square"></i></a>
-            <a href=""><i class="fa-brands fa-instagram-square"></i></a>
-            <a href=""><i class="fa-brands fa-youtube-square"></i></a>
-            <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-         </div>
+          
          <hr>
          <nav class="footer-menu">
             <a href="">Contact Us</a>
@@ -168,6 +163,11 @@
             <a href="">Live</a>
             <a href=""></a>
          </nav>
+         <div class=".site-name social">
+            <a href=""><i class="fa-brands fa-facebook-square"></i></a> 
+            <a href=""><i class="fa-brands fa-youtube-square"></i></a>
+            <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+        </div>
 
       </div>
    </footer>
